# WIR_Retriever_Engine

./: .gitignore  LICENSE  PROJECT_GUIDE.md  README.md  big-picture.md  pyproject.toml
notebooks/: 01_intro_smalldata.ipynb  02_inspect_and_index.ipynb  03_systems_and_evaluation.ipynb  04_hypotheses_and_error_analysis.ipynb  05_crosslingual_ltr.ipynb  06_dense_reranking.ipynb  07_cross_encoder_reranking.ipynb
paper/: preliminary-report.md
