[project]
name = "wir-retriever-engine"
version = "0.1.0"
description = "WIR 2026 search engine for the CLEF LongEval-Sci ad-hoc scientific retrieval task"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Rafael Barros", email = "rafael.rodrigues_barros@smail.th-koeln.de" },
]

# stack 
dependencies = [
    "python-terrier",
    "ir_datasets",
    "ir_datasets_longeval",
    "pandas",
    "nltk",
    "numpy",
    "notebook",
    "ipykernel",
    "matplotlib",  
    "scipy",        
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
