[project]
name = "wir-retriever-engine"
version = "0.1.0"
description = "WIR 2026 search engine for the CLEF LongEval-Sci ad-hoc scientific retrieval task"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

# stack
dependencies = [
    "python-terrier",
    "ir_datasets",
    "ir_datasets_longeval",
    "pandas",
    "nltk",
    "numpy",
    "notebook",
    "ipykernel",
    "matplotlib",
    "scipy",
    # cross-lingual retrieval + learning-to-rank (notebook 06)
    "langdetect",          # language audit of corpus / relevant docs
    "transformers",        # MarianMT EN->ES query translation
    "torch",               # backend for transformers (CPU build)
    "sentencepiece",       # MarianMT tokenizer
    "sacremoses",          # MarianMT detokenisation
    "scikit-learn",        # LTR (sklearn rankers) + utilities
    "xgboost",             # LambdaMART learned re-ranker
    "lightgbm",            # alternative LambdaMART implementation
    "sentence-transformers",  # multilingual dense re-ranker (notebook 07)
    "scipy-stubs>=1.15.3.0",
]

[tool.uv]
package = false
